--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-action-template",
-  "version": "0.0.0",
-  "description": "GitHub JavaScript action template",
+  "version": "0.0.1",
+  "description": "A simple GitHub action to post a Slack message when a new version is released.",
   "main": "index.js",
   "scripts": {
     "build": "ncc build index.js --license licenses.txt"
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/italia/js-action-template#readme",
   "dependencies": {
     "@actions/core": "^1.9.1",
-    "@actions/github": "^4.0.0"
+    "@actions/github": "^4.0.0",
+    "simple-git": "^3.16.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.27.0"
